[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "petacomm"
version = "0.1.0"
description = "Linux Server Yönetim Aracı — AI Destekli"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "psutil>=5.9",
]

[project.scripts]
petacomm = "petacomm.petacomm:main"

[tool.setuptools.packages.find]
where = ["."]
